--- a/icebox.cabal
+++ b/icebox.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d1d1526e818a48ebd23cce7b119849aa6c2f45cc87d7b58b21e4c2ae126d7458
+-- hash: adc2a0aa15f1d597814ed56a09820bfc4948d5b8c33be2424aa6f7ca995d774a
 
 name:           icebox
 version:        0.1.0.0
@@ -37,12 +37,10 @@ library
   default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
   ghc-options: -Wall
   build-depends:
-      async
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , containers
     , filepath
-    , lens
     , megaparsec
     , monad-logger
     , mtl
@@ -66,13 +64,11 @@ executable icebox
   default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      async
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , containers
     , filepath
     , icebox
-    , lens
     , megaparsec
     , monad-logger
     , mtl
@@ -98,13 +94,11 @@ test-suite icebox-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
-    , async
     , base >=4.7 && <5
     , bytestring
     , containers
     , filepath
     , icebox
-    , lens
     , megaparsec
     , monad-logger
     , mtl
