--- a/icebox.cabal
+++ b/icebox.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: adc2a0aa15f1d597814ed56a09820bfc4948d5b8c33be2424aa6f7ca995d774a
+-- hash: df9419b9c9cf5dd118a3db226f164745bf484ad70eba0a453c7b9d04f6edeeee
 
 name:           icebox
 version:        0.1.0.0
@@ -34,7 +34,10 @@ library
       Paths_icebox
   hs-source-dirs:
       src
-  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
+      NamedFieldPuns
   ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
@@ -61,7 +64,10 @@ executable icebox
       Paths_icebox
   hs-source-dirs:
       app
-  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
+      NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.7 && <5
@@ -90,7 +96,10 @@ test-suite icebox-test
       Paths_icebox
   hs-source-dirs:
       test
-  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
+      NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
